--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </nav>
 
   <main>
-    <h2>Bem-vindo ao Meu Site!</h2>
-    <p>Este é um exemplo de site desenvolvido sem frameworks.</p>
+    <h2>Bem-vindo ao Site!</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, nulla delectus ratione obcaecati sequi eaque cum placeat, corporis modi officiis saepe molestiae quasi et recusandae error nostrum vero, perspiciatis explicabo?</p>
   </main>
 
   <footer>
