--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
 
   <main>
     <h2>Sobre</h2>
-    <p>Esta é a página de informações sobre o meu site.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore repellat ad exercitationem corrupti, animi omnis ratione ab optio sint nesciunt. Omnis tenetur qui animi eveniet quod harum accusantium quo magnam.</p>
   </main>
 
   <footer>
