--- a/contato.html
+++ b/contato.html
@@ -23,16 +23,26 @@
   <main>
     <h2>Contato</h2>
     <p>Entre em contato conosco:</p>
-    <form action="enviar-email.php" method="POST">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" name="telefone" required>
-      <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" required></textarea>
-      <input type="submit" value="Enviar">
+    <form id="contact-form" action="./sucesso.html" method="POST">
+      <div>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required>
+      </div>
+      <div>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div>
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" required>
+      </div>
+      <div>
+        <label for="mensagem">Mensagem:</label>
+        <input type="str" id="mensagem" name="mensagem" required>
+      </div>
+      <div>
+        <button type="submit">Enviar</button>
+      </div>
     </form>
   </main>
 
