--- a/sucesso.html
+++ b/sucesso.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Formulário Enviado com Sucesso</title>
+  <title>Currículo Enviado com Sucesso</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Formulário Enviado com Sucesso!</h1>
-  <p>Obrigado por entrar em contato. Responderemos em breve.</p>
+  <h1>Curriculo Enviado com Sucesso!</h1>
+  <p>Obrigado por entrar em contato. Seu currículo esta salvo em nosso banco de dados.</p>
 </body>
 </html>
