--- a/curriculo.html
+++ b/curriculo.html
@@ -3,27 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contato</title>
+  <title>Curriculo</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <header>
-    <h1>Meu Site</h1>
+    <h1>Currículo</h1>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="sobre.html">Sobre</a></li>
-      <li><a href="produtos.html">Produtos</a></li>
-      <li><a href="contato.html">Contato</a></li>
+      <li><a href="vagas.html">Vagas</a></li>
+      <li><a href="curriculo.html">Currículo</a></li>
     </ul>
   </nav>
 
   <main>
-    <h2>Contato</h2>
-    <p>Entre em contato conosco:</p>
-    <form id="contact-form" action="./sucesso.html" method="POST">
+    <h2>Envie seu currículo:</h2>
+    <p>Preencha os campos abaixo:</p>
+    <form id="contact-form" action="./sucesso.html" method="POST" enctype="multipart/form-data">
       <div>
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
@@ -38,7 +39,11 @@
       </div>
       <div>
         <label for="mensagem">Mensagem:</label>
-        <input type="str" id="mensagem" name="mensagem" required>
+        <input type="text" id="mensagem" name="mensagem" required>
+      </div>
+      <div>
+        <label for="anexo">Anexo:</label>
+        <input type="file" id="anexo" name="anexo">
       </div>
       <div>
         <button type="submit">Enviar</button>
@@ -47,7 +52,7 @@
   </main>
 
   <footer>
-    <p>Entre em contato: telefone (11) 1234-5678 | email: contato@meusite.com</p>
+    <p>Entre em contato com nosso suporte: telefone (11) 1234-5678 | email: contato@meusite.com</p>
   </footer>
 </body>
 </html>
