--- a/ProjetoAplicadoBancodeTalentos/servicos.html
+++ b/ProjetoAplicadoBancodeTalentos/servicos.html
@@ -33,6 +33,7 @@
         </nav>
 
         <section>
+
             <p>O Banco de Talentos é uma plataforma inovadora que conecta talentos excepcionais a oportunidades empolgantes em diversas áreas profissionais.</p>
 
             <p>Nosso objetivo é criar uma comunidade dinâmica onde talentos e empresas possam se encontrar de forma eficiente e satisfatória. Acreditamos que talentos excepcionais são a chave para o sucesso de qualquer organização, e por isso nos empenhamos em oferecer um espaço onde as melhores conexões profissionais acontecem.</p>
@@ -47,7 +48,7 @@
         </section>
 
         <footer>
-            <p>Entre em contato com nosso suporte: telefone (11) 1234-5678 | email: contato@meusite.com</p>
+            <p>Entre em contato com nosso suporte: telefone (11) 1234-5678 | email: contato@talentbank.com.br</p>
         </footer>
 
     </body>
