--- a/ProjetoAplicadoBancodeTalentos/sucesso.html
+++ b/ProjetoAplicadoBancodeTalentos/sucesso.html
@@ -17,6 +17,13 @@
     h1 {
       color: green;
     }
+
+    footer {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 100px;
+    }
+
   </style>
 
 </head>
@@ -25,8 +32,14 @@
   
     <h1>Curriculo Enviado com Sucesso!</h1>
   
-  <p>Obrigado por entrar em contato. Seu currículo esta salvo em nosso banco de dados.</p>
+    <p>Obrigado por entrar em contato. Seu currículo esta salvo em nosso banco de dados.</p>
 
 </body>
+
+<footer>
+
+  <a href="index.html">Retornar a Home</a>
+
+</footer>
 
 </html>
