--- a/ProjetoAplicadoBancodeTalentos/servicos.html
+++ b/ProjetoAplicadoBancodeTalentos/servicos.html
@@ -34,6 +34,12 @@
 
         <section>
 
+            <h2 id="basico">Básico</h2><hr>
+
+            <h2 id="essencial">Essencial</h2><hr>
+
+            <h2 id="premium">Premium</h2><hr><br>
+
             <p>O Banco de Talentos é uma plataforma inovadora que conecta talentos excepcionais a oportunidades empolgantes em diversas áreas profissionais.</p>
 
             <p>Nosso objetivo é criar uma comunidade dinâmica onde talentos e empresas possam se encontrar de forma eficiente e satisfatória. Acreditamos que talentos excepcionais são a chave para o sucesso de qualquer organização, e por isso nos empenhamos em oferecer um espaço onde as melhores conexões profissionais acontecem.</p>
