--- a/sobre.html
+++ b/sobre.html
@@ -34,7 +34,7 @@
 
         <section>
             
-            <p>TalentBank foi planejada e criada por três alunos de Análise e Desenvolvimento de Sistemas, no ano de 2023 - João Alles, Matheus Fantini e Roger Maria. Na faculdade, são uma equipe que faz projetos aplicados juntos, esta equipe tem um nome e se chama GoodFellas. </p>
+            <p>TalentBank foi planejada e criada por três alunos de Análise e Desenvolvimento de Sistemas, no ano de 2023 - João Alles, Matheus Fantini e Roger Maria. Na faculdade, são uma equipe que faz projetos aplicados juntos, equipe nomeada de GoodFellas. </p>
 
             <p>Foi proposto por docentes da faculdade, desafios no semestre para a equipe realizar, foi decidido e escolhido pelos membros o Banco de Talentos que em sua descrição resumida, desenvolverá algum sistema de banco de dados que o candidato possa se cadastrar e quando ocorrer uma vaga de emprego podemos consultar com mais facilidade.</p>
     
