--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             <h3>Não fique mais indeciso com pilhas de currículos em sua mesa, contrate nosso Banco de Talentos e encurta o tempo de você e um belíssimo profissional para sua belíssima empresa. </h3>
 
             <h1 align="center"><img id="TalentBankHome2" src="imagens/TalentBankHome.jpg" width="800px" height="400px"/></h1>
-
-
+        
+        </section>
+            
         <footer>
             <p>Entre em contato com nosso suporte: telefone (11) 1234-5678 | email: contato@talentbank.com.br</p>
         </footer>
