--- a/sucesso.html
+++ b/sucesso.html
@@ -30,9 +30,9 @@
 
 <body>
   
-    <h1>Curriculo Enviado com Sucesso!</h1>
+    <h1> Enviado com Sucesso!</h1>
   
-    <p>Obrigado por entrar em contato. Seu currículo esta salvo em nosso banco de dados.</p>
+    <p>Obrigado por entrar em contato. Seu contato esta salvo em nosso banco de dados.</p>
 
 </body>
 
