--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
     <body>
         <header>
 
-            <img id="imagemlogo" src="imagens/logo.png" width="200px" height="100px"/>
+            <img id="imagemlogo" src="imagens/logo2.JPG" width="200px" height="100px"/>
 
             <h1>SOBRE</h1>
 
@@ -27,14 +27,13 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
 
         <section>
             
-            <p>TalentBank foi planejada e criada por três alunos de Análise e Desenvolvimento de Sistemas, no ano de 2023 - João Alles, Matheus Fantini e Roger Maria. Na faculdade, são uma equipe que faz projetos aplicados juntos, equipe nomeada de GoodFellas. </p>
+            <p>BankFellas foi planejada e criada por três alunos de Análise e Desenvolvimento de Sistemas, no ano de 2023 - João Alles, Matheus Fantini e Roger Maria. Na faculdade, são uma equipe que faz projetos aplicados juntos, equipe nomeada de GoodFellas. </p>
 
             <p>Foi proposto por docentes da faculdade, desafios no semestre para a equipe realizar, foi decidido e escolhido pelos membros o Banco de Talentos que em sua descrição resumida, desenvolverá algum sistema de banco de dados que o candidato possa se cadastrar e quando ocorrer uma vaga de emprego podemos consultar com mais facilidade.</p>
     
@@ -45,7 +44,7 @@
         </section>
 
         <footer>
-            <p>Entre em contato com nosso suporte: telefone (11) 1234-5678 | email: contato@talentbank.com.br</p>
+            <p>Entre em contato com nosso suporte: telefone (11) 1234-5678 | email: contato@bankfellas.com.br</p>
         </footer>
 
     </body>
